--- a/style.css
+++ b/style.css
@@ -46,23 +46,24 @@ h1, h2, h3, h4, h5 {
     flex: 1 1 50%;
     position: relative;
     background: url(./img/clouds.svg) repeat-x 65% center;
-    background: #63BEC4;
+    background-color: #63BEC4;
 }
 
 .logo {
-    width: 80%;
+    width: 91.7%;
     height: auto;
     max-width: 500px;
 }
 
 .lang {
     position: absolute;
-    right: 2rem;
-    top: 1.25rem;
+    right: 1.875rem;
+    top: 1.75rem;
 }
 .lang__btn {
     font-family: var(--font-special);
     font-weight:700;
+    font-size: 1.125rem;
     color: var(--blue-dark);
     text-decoration: none;
 }
@@ -74,7 +75,7 @@ h1, h2, h3, h4, h5 {
     justify-content: center;
     position: relative;
     flex: 0 1 50%;
-    padding: 7vh 3vw;
+    padding: 3vh 15vw;
     background: url(./img/wave.svg) var(--blue-dark) repeat-x 0 0;
     background-size: 0.75rem;
     
@@ -84,6 +85,7 @@ h1, h2, h3, h4, h5 {
     margin: 1rem 0 0 0;
     padding: 0; 
     font-size: 0.75rem;
+    font-weight: 400;
     text-transform: uppercase;
     color: var(--gray);
 }
@@ -138,7 +140,8 @@ h1, h2, h3, h4, h5 {
     width: 100%;
     max-width: 400px;
     margin: 1rem 0;
-    font-size: 1rem;
+    font-size: 0.875rem;
+    font-weight: 400;
     text-transform: uppercase;
     color: var(--white);
 }
@@ -149,7 +152,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .btn-primary {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     padding: 0.75rem 1.5rem;
     margin: 1rem 0 1.5rem 0;
     font-family: var(--font-special);
