--- a/style.css
+++ b/style.css
@@ -195,21 +195,22 @@ h1, h2, h3, h4, h5 {
     .intro {
         flex: 1 1 70%;
         height: 100vh;
-        background-size: 20%;
-        background-repeat: repeat;
+        background-size: 100%;
+        background-repeat: ;
     }
     .course {
         flex: 1 1 30%;
-        min-width: 500px;
+        min-width: 550px;
         height: 100vh;
         padding-top: 15vh;
         background-size: initial;
         background-image: none;
         overflow-y: auto;
+        padding: 0vh 0vw; 
     }
 
     .course__distance {
-        top: 10%;
+        top: 9rem;
         right: 10%;
     }
 
@@ -218,9 +219,9 @@ h1, h2, h3, h4, h5 {
     }
 
     .course__name {
-        font-size: 0.25rem;
+        font-size: 2.25rem;
         margin: 2rem 0 0.5rem 0;
-        transform: rotate(10deg);
+        
     }
     .course__address {
         font-size: 0.875rem;
@@ -232,7 +233,7 @@ h1, h2, h3, h4, h5 {
         font-size: 2.25rem;
     }
     .btn-secondary {
-        margin: 15vh 0 0 0;
+        margin: 10vh 0 0 0;
         font-size: 1rem;
     }
 }
